<resources>
    <string name="app_name" translatable="false">DoktorABC</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_delete">Delete</string>
    <string name="all_load">Load</string>
    <string name="all_retry">Retry</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="address_type_regular">Personal</string>
    <string name="address_type_dhl_packstation">DHL Packstation</string>
    <string name="label_none" translatable="false" />
    <string name="label_categories">New order</string>
    <string name="label_products">{title}</string>
    <string name="label_product">{title}</string>
    <string name="label_orders">Reorder</string>
    <string name="label_options">More</string>
    <string name="label_profile">Profile</string>
    <string name="label_edit_profile">Profile details</string>
    <string name="label_addresses">Delivery address</string>
    <string name="label_persist_address">Delivery address</string>
    <string name="label_change_password">Change password</string>
    <string name="label_settings">Settings</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_region">Location</string>
    <string name="label_biometric">Biometric</string>
    <string name="label_contact_us">Contact Us</string>
    <string name="label_recover_password">Forgot password</string>
    <string name="label_register">Registration</string>
    <string name="title_categories">@string/label_categories</string>
    <string name="title_orders">@string/label_orders</string>
    <string name="title_options">@string/label_options</string>
    <string name="message_invalid_operation_output_message">Server returned invalid response</string>
    <string name="message_connect_exception_message">Failed to connect to server</string>
    <string name="message_unknown_host_exception_message">Server could not be reached</string>
    <string name="message_socket_timeout_exception_message">Request timeout. Please check your internet connection</string>
    <string name="message_exception_button">@android:string/ok</string>
    <string name="categories_retry_update_categories_title">Loading categories has failed. Please try again.</string>
    <string name="categories_retry_update_categories_action">@string/all_load</string>
    <string name="products_retry_update_products_title">Loading products has failed. Please try again.</string>
    <string name="products_retry_update_products_action">@string/all_load</string>
    <string name="product_shipping">Free shipping</string>
    <string name="product_label_product_one">Dosage</string>
    <string name="product_label_product_two">Quantity</string>
    <string name="product_order">Start consultation</string>
    <string name="orders_retry_update_orders_title">Loading your orders has failed. Please try again.</string>
    <string name="orders_retry_update_orders_action">@string/all_load</string>
    <string name="order_format_order_quantity">(%s)</string>
    <string name="order_label_order_id">Order number:</string>
    <string name="order_label_order_date_time">Ordered:</string>
    <string name="order_label_status">Status:</string>
    <string name="order_label_shipping_date_time">Sent on:</string>
    <string name="order_label_shipping_id">Shipment number:</string>
    <string name="order_reorder_same">Reorder</string>
    <string name="order_reorder_other">Select new dosage</string>
    <string name="options_label_profile">@string/label_profile</string>
    <string name="options_label_settings">@string/label_settings</string>
    <string name="options_label_terms_and_conditions">Terms and Conditions</string>
    <string name="options_label_privacy_policy">Privacy Policy</string>
    <string name="options_label_contact_us">@string/label_contact_us</string>
    <string name="options_label_logout">Log Out</string>
    <string name="profile_label_id">ID</string>
    <string name="profile_label_medical_record">Medical record</string>
    <string name="profile_label_addresses">Delivery address</string>
    <string name="profile_label_change_password">Change password</string>
    <string name="edit_profile_info">Here you can view and update your data</string>
    <string name="edit_profile_warning">If you want to change your name/e-mail address, please contact our customer service.</string>
    <string name="edit_profile_label_first_name">First name</string>
    <string name="edit_profile_label_last_name">Last name</string>
    <string name="edit_profile_label_email">E-mail address</string>
    <string name="edit_profile_label_birthday_date">Date of birth</string>
    <string name="edit_profile_label_gender">Gender</string>
    <string name="edit_profile_submit">Save</string>
    <string name="edit_profile_message_success_button">@android:string/ok</string>
    <string name="addresses_empty_addresses_title">You haven\'t added any address</string>
    <string name="addresses_empty_addresses_action">Add new address</string>
    <string name="addresses_retry_update_addresses_title">Loading addresses has failed. Please try again.</string>
    <string name="addresses_retry_update_addresses_action">@string/all_load</string>
    <string name="addresses_add_address">Add new address</string>
    <string name="address_street_dhl_packstation">Packstation</string>
    <string name="persist_address_edit_info">Please note that a change of address only applies to the future orders.</string>
    <string name="persist_address_label_address_type">Address type</string>
    <string name="persist_address_label_title">Address name</string>
    <string name="persist_address_label_first_name">First name</string>
    <string name="persist_address_label_last_name">Last name</string>
    <string name="persist_address_label_country_name">Country</string>
    <string name="persist_address_label_postal_code">Postal code</string>
    <string name="persist_address_label_city">City</string>
    <string name="persist_address_label_street">Street</string>
    <string name="persist_address_label_house_number">House number</string>
    <string name="persist_address_label_company_name">Company name (optional)</string>
    <string name="persist_address_label_packstation_address">Packstation address</string>
    <string name="persist_address_label_packstation_number">Packstation number</string>
    <string name="persist_address_label_phone_number">Your phone number</string>
    <string name="persist_address_add_submit">Add address</string>
    <string name="persist_address_edit_submit">Save address</string>
    <string name="persist_address_message_success_button">@android:string/ok</string>
    <string name="change_password_label_current_password">Old password</string>
    <string name="change_password_label_new_password">New password</string>
    <string name="change_password_label_repeated_new_password">Repeat new password</string>
    <string name="change_password_submit">Change password</string>
    <string name="change_password_message_success_title">Password has changed</string>
    <string name="change_password_message_success_button">Go shopping</string>
    <string name="settings_label_notifications">Notification</string>
    <string name="settings_label_region">Location</string>
    <string name="settings_label_biometric">Biometric</string>
    <string name="settings_biometric_disabled">Disabled</string>
    <string name="settings_biometric_enabled">Enabled</string>
    <string name="notifications_label_email">E-mail</string>
    <string name="notifications_label_push">Push notifications</string>
    <string name="notifications_label_sms">SMS</string>
    <string name="region_submit">Save</string>
    <string name="biometric_title_disabled">Enter your password</string>
    <string name="biometric_title_enabled">Biometric authentication is enabled</string>
    <string name="biometric_disabled_info">Enter your password in order to enable biometric authentication</string>
    <string name="biometric_disabled_label_password">Password</string>
    <string name="biometric_disabled_enable">Make enable</string>
    <string name="biometric_enabled_disable">Disable</string>
    <string name="biometric_biometric_title">Confirm to check out</string>
    <string name="biometric_biometric_negative_button">@string/all_cancel</string>
    <string name="contact_us_label_title">Write to our support team</string>
    <string name="contact_us_label_info">Please note: our support team can not answer any questions about your health</string>
    <string name="contact_us_label_email">E-mail address</string>
    <string name="contact_us_label_name">Your name</string>
    <string name="contact_us_label_order_number">Order number (optional)</string>
    <string name="contact_us_label_details">Please give details</string>
    <string name="contact_us_submit">Send</string>
    <string name="contact_us_message_success_button">@android:string/ok</string>
    <string name="contact_us_retry_update_contact_details_title">Loading contact details has failed. Please try again.</string>
    <string name="contact_us_retry_update_contact_details_action">@string/all_load</string>
    <string name="login_promo">Medical consultation, convenient and safe for more than <b>10.000 customers</b></string>
    <string name="login_label_email">E-mail address</string>
    <string name="login_label_password">Password</string>
    <string name="login_recover_password">Forgot password?</string>
    <string name="login_login">Log in</string>
    <string name="login_register">Create new account</string>
    <string name="login_biometric_title">Confirm to check out</string>
    <string name="login_biometric_negative_button">@string/all_cancel</string>
    <string name="select_region_title">Select your location</string>
    <string name="select_region_retry_update_regions_title">Loading locations has failed. Please try again.</string>
    <string name="select_region_retry_update_regions_action">@string/all_load</string>
    <string name="recover_password_label_email">E-mail address</string>
    <string name="recover_password_label_info">Please enter the e-mail address you have entered. You will then receive an e-mail from us with a link to reset your password.</string>
    <string name="recover_password_submit">Send</string>
    <string name="recover_password_message_success_title">Reset password</string>
    <string name="recover_password_message_success_button">OK, got it</string>
    <string name="register_label_email">E-mail address</string>
    <string name="register_label_first_name">First name</string>
    <string name="register_label_last_name">Last name</string>
    <string name="register_label_password">Password</string>
    <string name="register_label_repeated_password">Repeat password</string>
    <string name="register_label_birthday_date">Date of birth</string>
    <string name="register_label_gender">Gender</string>
    <string name="register_register">Sign in</string>
    <string name="register_retry_update_user_consent_title">Loading data has failed. Please try again.</string>
    <string name="register_retry_update_user_consent_action">@string/all_load</string>
</resources>